Fixed: Footer isn't too low
Fixes #188

--- a/elvis/static/css/elvis-style.css
+++ b/elvis/static/css/elvis-style.css
@@ -439,7 +439,7 @@ body
 #footer
 {
     width: 100%;
-    height: 80px;
+    height: 101px;
     position: absolute;
     bottom: 0;
     left: 0;
